Update gitignore to exclude physics2d settings

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ Library/AnnotationManager
 Library/CurrentLayout.dwlt
 Library/CurrentMaximizeLayout.dwlt
 *-csharp.sln.*/
+ProjectSettings/Physics2DSettings.asset
